# AndroidAppFactory

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.gradle  build_aar.gradle  build_aar_old.gradle  build_maven.gradle  build_merge_strings.sh  build_module.gradle  build_upload.sh  config.gradle  dependencies.gradle  dependencies_aaf_config.gradle  dependencies_asr.gradle  dependencies_common.gradle  dependencies_deprecated.gradle  dependencies_lib.gradle  dependencies_lock_widget.gradle  dependencies_services.gradle  dependencies_tbs.gradle  proguard-rules-common.pro  proguard-rules.pro  settings.gradle
APPTest/: build.gradle  build.gradle.kts
Application/: build.gradle  build.gradle.kts
BaseDebug/: build.gradle  build.gradle.kts
BaseDebugCompose/: TTS_UI_MIGRATION_SUMMARY.md  build.gradle  build.gradle.kts
CommonAbout/: build.gradle  build.gradle.kts
CommonAboutCompose/: build.gradle.kts
CommonAccessibility/: build.gradle.kts
CommonAceEditor/: build.gradle.kts
CommonAudioWave/: build.gradle  build.gradle.kts
CommonBottomTab/: build.gradle.kts
CommonCompose/: build.gradle  build.gradle.kts
CommonComposeDebug/: build.gradle
CommonCrop/: build.gradle.kts
CommonDebug/: build.gradle  build.gradle.kts
CommonDebugCompose/: build.gradle  build.gradle.kts
CommonDeprecated/: build.gradle.kts
CommonFeedback/: build.gradle  build.gradle.kts
CommonFilePreview/: build.gradle.kts
CommonLanguage/: build.gradle.kts
CommonList/: build.gradle.kts
CommonListCompose/: build.gradle  build.gradle.kts
CommonMedia/: build.gradle.kts
CommonMessage/: build.gradle  build.gradle.kts
CommonMessageCompose/: build.gradle.kts
CommonNavigationDrawer/: build.gradle.kts
CommonNetwork/: build.gradle  build.gradle.kts
CommonPanel/: build.gradle.kts
CommonPermission/: build.gradle.kts
CommonPhotos/: build.gradle  build.gradle.kts
CommonPraise/: build.gradle  build.gradle.kts
CommonQRCode/: build.gradle  build.gradle.kts
CommonShare/: build.gradle.kts
CommonSplash/: build.gradle  build.gradle.kts
CommonSvga/: build.gradle.kts
CommonTBS/: build.gradle.kts
CommonTBSFeedback/: build.gradle.kts
CommonTBSWebview/: build.gradle.kts
CommonTBSWrapper/: build.gradle.kts
CommonTest/: build.gradle
CommonWebview/: build.gradle  build.gradle.kts
CommonWrapper/: build.gradle.kts
CommonWrapperCompose/: build.gradle.kts
CommonWrapperMin/: build.gradle.kts
Framework/: build.gradle  build.gradle.kts
LibAAF/: build.gradle  build.gradle.kts
LibAAFResource/: build.gradle.kts
LibAPK/: build.gradle  build.gradle.kts
LibASR/: build.gradle.kts
LibASRMin/: build.gradle.kts
LibAceEditor/: build.gradle  build.gradle.kts
LibAdapter/: build.gradle  build.gradle.kts
LibAdobeXMPCore/: build.gradle.kts
LibAndroid/: build.gradle  build.gradle.kts
LibAppIcon/: build.gradle.kts
LibAudio/: build.gradle.kts
LibAudioPlayer/: build.gradle.kts
LibAudioRecord/: build.gradle  build.gradle.kts
LibBatchDownload/: build.gradle.kts
LibBlockTask/: build.gradle.kts
LibBottomTab/: build.gradle.kts
LibCameraScan/: build.gradle.kts
LibChannel/: build.gradle  build.gradle.kts
LibChinese/: build.gradle.kts
LibColor/: build.gradle.kts
LibCommonUIUtils/: build.gradle  build.gradle.kts
LibCommonUtils/: build.gradle  build.gradle.kts
LibConfig/: build.gradle  build.gradle.kts
LibCoroutines/: build.gradle.kts
LibCrop/src/main/cpp/: CMakeLists.txt  com_bihe0832_android_lib_crop_jni_CropAction.h  uCrop.cpp
(+3028 files in other folders)
